removed unnecessary code, rewrote conditional display jsx, moved numeric constants to a separate file, replaced numbers with variables, corrected styles, improved readability of validation conditions.

--- a/src/components/TodoItem/TodoItem.css
+++ b/src/components/TodoItem/TodoItem.css
@@ -2,13 +2,12 @@
     margin-top: 1rem ;
     padding: 0 1rem;
     display: flex;
-    justify-content: space-between;
     background-color: white;
     height: 4rem;
     align-items: center;
     border-radius: 6px;
     box-shadow: 1px 1px 2px rgb(104, 104, 104);
-
+    justify-content: flex-start;
 }
 
 .form {
@@ -24,16 +23,23 @@ align-items: center;
     gap: 1rem;
 }
 
+.checkbox-container{
+    width: 1.5rem;
+    height: 1.5rem;
+
+}
+
 .checkbox {
     border: 3px solid black;
     border-radius: 10px;
-    width: 1.5rem;
-    height: 1.5rem;
+    width: 100%;
+    height: 100%;
+    margin: 0 1rem 0 0;
 }
 
 .paragraph {
     font-size: 1.5rem;
-    margin: 0;
+    margin-left: 1rem;
     padding: 0;
 }
 
@@ -44,6 +50,7 @@ align-items: center;
 
 .buttons {
     display: flex;
+    justify-content: flex-end;
     gap: 1rem;
 }
 
@@ -56,6 +63,7 @@ align-items: center;
     height: 2.5rem;
     transition: 0.2s;
     cursor: pointer;
+    margin-left: auto;
 }
 
 .edit:hover {
@@ -71,6 +79,7 @@ align-items: center;
     height: 2.5rem;
     transition: 0.2s;
     cursor: pointer;
+    margin-left: 1rem;
 }
 
 .delete:hover {
@@ -80,6 +89,7 @@ align-items: center;
 .edit-input{
 width: 15rem;
 height: 2rem;
+margin-left: 1rem;
 background-color: rgb(255, 255, 255);
 border: none;
 border-radius: 4px;
